# rest_client

./: CMakeLists.txt  README.md
include/: data_analyzer.hpp  friend.hpp  json_parser.hpp  rest_client.hpp  user.hpp
src/: data_analyzer.cpp  json_parser.cpp  main.cpp  rest_client.cpp
